Fix bootrap fixed navbar space [ Overlapping Issue ]

--- a/css/app.css
+++ b/css/app.css
@@ -7,6 +7,9 @@ a, a:link, a:hover, a:active, a:visited {
 h1, h2, h3, h4, h5, h6, div, span, p, li, a, sup {
   font-family: "PT Sans", sans-serif; }
 
+body {
+  padding-top: 80px; }
+
 section {
   padding: 3em 0; }
 
